# Rent_Flow

./: .env.example  .gitignore  ACTION_CHECKLIST.md  AI_WALLET_DETECTION_ENHANCEMENT.md  ALL_ERRORS_FIXED.md  APPLICATION_SYSTEM_SUMMARY.md  ARC_DEPLOYMENT_GUIDE.md  ARC_ENHANCEMENTS.md  ASSIGN_PROPERTIES_TO_MANAGERS.sql  AUDIT_SUMMARY.md  AUTHENTICATION_FINAL_FIX.md  AUTHENTICATION_PERMANENT_FIX_SUMMARY.md  AUTO_SYNC_AUTH_USERS_GUIDE.md  Anchor.toml  BACKEND_DEPLOYMENT_NEEDED.md  BLOCKCHAIN_AI_ENHANCEMENT_ROADMAP.md  BLOCKCHAIN_FIXES_SUMMARY.md  BLOCKCHAIN_SIGNING_STANDARD.md  CHANGELOG.md  CHAT_CONTINUITY_MIGRATION.sql  CHECK_MANAGER_ROLE.sql  CIRCLE_API_CONFIGURATION.md  CIRCLE_SDK_SETUP.md  CIRCLE_USDC_PAYMENT_VERIFICATION.md  CLEANUP_PROGRESS.md  CLEAR_CACHE_INSTRUCTIONS.md  COMPLETE_STATUS.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRACT_UPDATE_COMPLETE.md  CONTRIBUTING.md  DATABASE_FIX.md  DATABASE_SETUP_INSTRUCTIONS.md  DEBUGGING_LOADING_ISSUE.md  DEMO_ACCOUNTS_INFO.md  DEMO_DATA_MANUAL.sql  DEPLOYMENT_COMPLETE.md  DEPLOY_WINDOWS.md  DIAGNOSE_CHAT_FK_ERROR.sql  ENHANCED_SEARCH_IMPLEMENTATION_GUIDE.md  ENVIRONMENT_SETUP.md  (+100 more)
.github/: PULL_REQUEST_TEMPLATE.md  REPOSITORY_TOPICS.md
backend/: .env.example  FIX-AUTH-SYNC-JONES.sql  FIX-MISSING-USER.sql  FIX-SIGNUP-ERROR.sql  QUICK-RESET.sql  RESET-AND-VERIFY.sql  audit-backend.json  check-all-payments.js  (+22 more)
programs/rentflow-core/: Cargo.toml  FINAL_WORKING.rs  FIXED.rs  MINIMAL.rs  PLAYGROUND_READY.rs  README.md  SOLANA_PLAYGROUND_INSTRUCTIONS.md  SOLPG_CLEAN.rs  package.json
programs/rentflow-core/src/: lib.rs
(+236 files in other folders)
