[package]
name = "rentflow-core"
version = "0.1.0"
description = "RentFlow on-chain lease management program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rentflow_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16"

[dev-dependencies]
solana-program-test = "~1.16"
solana-sdk = "~1.16"
spl-token = { version = "~3.5", features = ["no-entrypoint"] }
